--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -36,11 +36,12 @@
 					id="BadgedButton"
 					class="sapUiTinyMarginBeginEnd"
 					icon="sap-icon://cart"
-					text="Cart">
+					text="Cart"
+					press=".GoToCart">
 						<customData>
 							<BadgeCustomData
 								key="badge"
-								value="1"
+								value="0"
 								visible="true"/>
 						</customData>
 					</Button>
@@ -138,6 +139,7 @@
 						id="CurrentValue"
 						value="0"
 						width="130px"/> -->
+
 					<Button
 						id="ToCartButton"
 						class="sapUiTinyMarginBeginEnd"
