--- a/view/Cart.view.xml
+++ b/view/Cart.view.xml
@@ -1,9 +1,103 @@
 <mvc:View
 	controllerName="shop.controller.Cart"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+		xmlns:core="sap.ui.core"
+		xmlns:tnt="sap.tnt">
 	<Page title="Cart"
 		showNavButton="true"
 		navButtonPress=".onNavBack">
+		<Button
+		class="sapUiTinyMarginBeginEnd"
+		text="asd"
+		press=".log">
+		</Button>
+		<content>
+			<Table id="cartList"
+		showUnread="true"
+		width="auto"
+		items="{/Cart}">
+
+		<columns>
+			<Column width="12em">
+				<Text text="Photo" />
+			</Column>
+			<Column width="12em" >
+				<Text text="Product" />
+			</Column>
+			<Column minScreenWidth="Tablet" demandPopin="true">
+				<Text text="Supplier" />
+			</Column>
+			<Column minScreenWidth="Desktop" demandPopin="true">
+				<Text text="Weight" />
+			</Column>
+			<Column minScreenWidth="Desktop" demandPopin="true">
+				<Text text="Dimensions" />
+			</Column>
+			<Column minScreenWidth="Desktop" demandPopin="true">
+				<Text text="Availability" />
+			</Column>
+			<Column>
+				<Text text="Price" />
+			</Column>
+		</columns>
+
+		<items>
+			<ColumnListItem>
+				<cells>
+					<Image src="{ProductPicUrl}" width="60%"/>
+
+					<ObjectIdentifier title="{Name}" text="{ProductId}" />
+
+					<Text text="{SupplierName}" />
+
+					<ObjectNumber
+						inverted="true"
+						number="{
+							parts:[{path:'WeightMeasure'}, {path:'WeightUnit'}],
+							formatOptions: {showMeasure: true}
+						}"
+						state="{
+							parts:[
+								{path: 'WeightMeasure'},
+								{path: 'WeightUnit'}
+							],
+							formatter: 'shop.model.formatter.statusWeight'
+						}"
+						unit="{CurrencyCode}"
+					/>
+
+					<Text text="{Width} x {Depth} x {Height} {DimUnit}" />
+
+					<tnt:InfoLabel
+						text="{Status}"
+						colorScheme= "{
+							parts: [
+								{path: 'Status'}
+							],
+							formatter: 'shop.model.formatter.statusText'
+						}" />
+
+					<ObjectNumber
+						number="{
+							parts:[{path:'Price'},{path:'CurrencyCode'}],
+							type: 'sap.ui.model.type.Currency',
+							formatOptions: {showMeasure: false}
+						}"
+						state="{
+							parts:[
+								{path: 'Price'}
+							],
+							formatter: 'shop.model.formatter.statusPrice'
+						}"
+						unit="{CurrencyCode}" />
+
+				</cells>
+			</ColumnListItem>
+		</items>
+		
+
+			</Table>
+		</content>
 	</Page>
 </mvc:View>
